// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AspectRatio > should render with default styles 1`] = `
.circuit-0 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    />
  </div>
</div>
`;

exports[`AspectRatio > should render with fixed aspect ratio styles 1`] = `
.circuit-0 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 62%;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    />
  </div>
</div>
`;
